[skip ci] [ci skip] Fix license

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -49,8 +49,7 @@ about:
   license: GPL (>= 2)
   summary: Fit and compare Gaussian linear and nonlinear mixed-effects models.
   license_family: GPL3
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
-  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win]
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
 
 extra:
   recipe-maintainers:
