--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '3.1-137' %}
+{% set version = '3.1-138' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -7,16 +7,14 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: nlme_{{ version }}.tar.gz
   url:
     - {{ cran_mirror }}/src/contrib/nlme_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/nlme/nlme_{{ version }}.tar.gz
-  sha256: 01049bb9c53826ff4ec5ba7117d766b17a0108c85f80871a5adb0c0b58ef7e87
+  sha256: b21ee8b92c783198cdd7db66a0cfa37a819286b452ff1a03277438f3a6d9e581
 
 build:
   merge_build_host: True  # [win]
-  number: 1000
-  skip: true  # [win32]
+  number: 0
   rpaths:
     - lib/R/lib/
     - lib/
@@ -53,8 +51,27 @@ about:
 
 extra:
   recipe-maintainers:
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - cbrueffer
+    - conda-forge/r
+
+# Package: nlme
+# Version: 3.1-138
+# Date: 2019-04-02
+# Priority: recommended
+# Title: Linear and Nonlinear Mixed Effects Models
+# Authors@R: c(person("Jose", "Pinheiro", role = "aut", comment = "S version"), person("Douglas", "Bates", role = "aut", comment = "up to 2007"), person("Saikat", "DebRoy", role = "ctb", comment = "up to 2002"), person("Deepayan", "Sarkar", role = "ctb", comment = "up to 2005"), person("EISPACK authors", role = "ctb", comment = "src/rs.f"), person("Siem", "Heisterkamp", role = "ctb", comment = "Author fixed sigma"), person("Bert", "Van Willigen",role = "ctb", comment = "Programmer fixed sigma"), person("R-core", email = "R-core@R-project.org", role = c("aut", "cre")))
+# Description: Fit and compare Gaussian linear and nonlinear mixed-effects models.
+# Depends: R (>= 3.4.0)
+# Imports: graphics, stats, utils, lattice
+# Suggests: Hmisc, MASS
+# LazyData: yes
+# ByteCompile: yes
+# Encoding: UTF-8
+# License: GPL (>= 2) | file LICENCE
+# BugReports: https://bugs.r-project.org
+# URL: https://svn.r-project.org/R-packages/trunk/nlme
+# NeedsCompilation: yes
+# Packaged: 2019-04-04 06:50:30 UTC; maechler
+# Author: Jose Pinheiro [aut] (S version), Douglas Bates [aut] (up to 2007), Saikat DebRoy [ctb] (up to 2002), Deepayan Sarkar [ctb] (up to 2005), EISPACK authors [ctb] (src/rs.f), Siem Heisterkamp [ctb] (Author fixed sigma), Bert Van Willigen [ctb] (Programmer fixed sigma), R-core [aut, cre]
+# Maintainer: R-core <R-core@R-project.org>
+# Repository: CRAN
+# Date/Publication: 2019-04-07 15:20:03 UTC
