--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '3.1-138' %}
+{% set version = '3.1-139' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,7 +10,7 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/nlme_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/nlme/nlme_{{ version }}.tar.gz
-  sha256: b21ee8b92c783198cdd7db66a0cfa37a819286b452ff1a03277438f3a6d9e581
+  sha256: 0460fc69d85122177e7ef01bad665d56bcaf63d31bdbfdbdfdcba2c082085739
 
 build:
   merge_build_host: True  # [win]
@@ -54,8 +54,8 @@ extra:
     - conda-forge/r
 
 # Package: nlme
-# Version: 3.1-138
-# Date: 2019-04-02
+# Version: 3.1-139
+# Date: 2019-04-09
 # Priority: recommended
 # Title: Linear and Nonlinear Mixed Effects Models
 # Authors@R: c(person("Jose", "Pinheiro", role = "aut", comment = "S version"), person("Douglas", "Bates", role = "aut", comment = "up to 2007"), person("Saikat", "DebRoy", role = "ctb", comment = "up to 2002"), person("Deepayan", "Sarkar", role = "ctb", comment = "up to 2005"), person("EISPACK authors", role = "ctb", comment = "src/rs.f"), person("Siem", "Heisterkamp", role = "ctb", comment = "Author fixed sigma"), person("Bert", "Van Willigen",role = "ctb", comment = "Programmer fixed sigma"), person("R-core", email = "R-core@R-project.org", role = c("aut", "cre")))
@@ -70,8 +70,8 @@ extra:
 # BugReports: https://bugs.r-project.org
 # URL: https://svn.r-project.org/R-packages/trunk/nlme
 # NeedsCompilation: yes
-# Packaged: 2019-04-04 06:50:30 UTC; maechler
+# Packaged: 2019-04-09 07:36:00 UTC; ripley
 # Author: Jose Pinheiro [aut] (S version), Douglas Bates [aut] (up to 2007), Saikat DebRoy [ctb] (up to 2002), Deepayan Sarkar [ctb] (up to 2005), EISPACK authors [ctb] (src/rs.f), Siem Heisterkamp [ctb] (Author fixed sigma), Bert Van Willigen [ctb] (Programmer fixed sigma), R-core [aut, cre]
 # Maintainer: R-core <R-core@R-project.org>
 # Repository: CRAN
-# Date/Publication: 2019-04-07 15:20:03 UTC
+# Date/Publication: 2019-04-09 20:28:44 UTC
